All the utility classes to run and build analyses are removed and will be moved to another repo. Now, this project only contains the classes to listen javac during the compilation process, build and generate the 7 representations and store the resulting graph in a Neo4j DB. Aditionally, ProgQuery was configured to use maven as dependency manager, so a pom file was included. Updated the fix #15, that was not updated in the develop branch due to merge conflicts.